tests/toy/neg/001422_mutation.toylang
program a = { var a : a; } .
